feat/ finalizando comentarios e aprendendo a mandar propriedades para os componentes

--- a/redeSocialTeste/src/components/comment.module.css
+++ b/redeSocialTeste/src/components/comment.module.css
@@ -14,9 +14,12 @@
     border-radius: 50%;
 }
 
+.comment > div{
+    width: 100%;
+}
+
 .content{
     background-color: var(--blue2);
-    width: 100%;
     display: flex;
     padding: 0.7rem 1.4rem 1.75rem 1.4rem;
     flex-direction: column;
@@ -27,6 +30,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .content > header > div > h1 {
     font-size: .875rem;
@@ -40,9 +44,10 @@
     font-weight: 700;
 }
 
-.content > header > img{
-    height: 1.5rem;
-    width: 1.5rem;
+.content > header > button{
+    color: #B0B0BF;
+    line-height: 0;
+    padding: 0.1rem;
 }
 
 .content > main{
@@ -52,8 +57,23 @@
     font-weight: 400;
 }
 
-.likes > h1{
+.likes > button{
+    margin-top: 0.7rem;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    align-items: center;
+    color: #8D8D99;
+    padding: .1rem;
+}
+
+.likes p{
+    display: block;
     font-size: 0.875rem;
     font-weight: 700;
     color: #DDDDDD;
+}
+.likes span::before{
+    content: '\2022';
+    margin:  0 .3rem 0 .1rem;
 }
