--- a/redeSocialTeste/src/global.css
+++ b/redeSocialTeste/src/global.css
@@ -19,6 +19,11 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
+    outline: none;
+}
+
+:focus{
+    box-shadow: 0 0 0 .17rem var(--blue5);
 }
 
 body {
@@ -27,4 +32,10 @@ body {
 
 body, input, textarea, button {
     font-size: 1rem;
+}
+
+button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
